# BridgeMix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  setup.bat  setup.sh
.github/workflows/: changelog.yml  ci.yml  release.yml
assets/: io.github.ex0danify.BridgeMix.desktop
doc/: PLUGINS.md  PROTOCOL.md
src/bridgemix/: .gitignore  __init__.py  __main__.py  paths.py  selfupdate.py  theme.py  updates.py
src/bridgemix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bridgemix/api/: __init__.py  app.py  gateway.py  installer.py  server.py  settings.py
src/bridgemix/audio/: __init__.py  spectrum.py
src/bridgemix/device/: bridge_cast.py  parameters.py
src/bridgemix/device/constants/: __init__.py  channel.py  game_fx.py  global_.py  mic_fx.py  sections.py  voice_fx.py
src/bridgemix/gui/: icons.py  main_window.py
src/bridgemix/gui/panels/: chat_fx_panel.py  game_fx_panel.py  home_page.py  mic_fx_panel.py  mic_setup_panel.py  mic_sfx_panel.py  midi_monitor.py  output_panel.py  routing_panel.py  system_panel.py
src/bridgemix/gui/panels/extras/: __init__.py  panel.py  remote_api.py
src/bridgemix/gui/panels/plugins/: __init__.py  panel.py
src/bridgemix/gui/widgets/: about_dialog.py  controls.py  eq_widget.py  flow_layout.py  input_strip.py  preset_bar.py  profile_widget.py  surround_canvas.py
src/bridgemix/midi/: detector.py  sysex.py  transport.py
src/bridgemix/plugins/: __init__.py  device.py  installer.py  manager.py  manifest.py  settings_store.py  state.py  style.py  widget.py
src/bridgemix/plugins/builtins/: __init__.py
src/bridgemix/plugins/builtins/remote_api/: __init__.py  app.py  plugin.py  plugin.toml  server.py  settings.py  widget.py
src/bridgemix/plugins/builtins/remote_api/tests/: test_integration.py  test_routes.py  test_settings.py  test_widget.py
src/bridgemix/preset/: game_eq_factory.py  game_eq_library.py  manager.py  roland_map.py
src/bridgemix/routing/: __init__.py  backend.py  monitor.py  store.py
tests/: conftest.py  test_api_gateway.py  test_api_installer.py  test_api_integration.py  test_api_requirements_sync.py  test_api_routes.py  test_api_settings.py  test_bridge_cast.py  test_detector.py  test_device_facade.py  test_flow_layout.py  test_game_eq_library.py  test_parameters.py  test_plugin_installer.py  test_plugin_manager.py  test_plugin_manifest.py  test_plugin_settings_store.py  test_plugin_state.py  test_plugin_style.py  test_plugin_widget.py  test_preset_manager.py  test_remote_api_widget.py  test_roland_map.py  test_routing.py  test_selfupdate.py  test_sysex.py  test_updates.py
