[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgemix"
version = "0.1.0"
description = "Linux GUI controller for Roland Bridge Cast USB audio mixer"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5",
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]
# Optional REST API server (System ▸ Remote API). Lazily imported; the app runs
# fine without these installed.
api = ["fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bridgemix = "bridgemix.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
